# lyric-next

./: Cargo.toml  readme.md
src/: app.rs  cache.rs  client.rs  error.rs  lib.rs  main.rs  song.rs  state.rs  ui.rs
src/client/: kugou.rs  netease.rs  ovh.rs  qqmusic.rs
src/ui/: lyric.rs  search.rs
